# argmin-gravitas

./: .gitattributes  .gitignore  404.html  Gemfile  LICENCE.md  README.md  _config.yml  _config_dev.yml  _config_dev_cloudflare.yml  _config_dev_netlify.yml  _config_docker.yml  _redirects  about.md  academic_cv.pdf:Zone.Identifier  archive.md  best.md  blog.sublime-project  blog.sublime-workspace  books.html  books.md  cv.pdf:Zone.Identifier  cv.tex  feed.xml  index.html  keybase.txt  llms.txt  metrics.md  projects.md  quotes.md  robots.txt  staticman.yaml  staticman.yml
.archiver/: index.json
Dockerfiles/: Dockerfile.build  Dockerfile.bundle  Dockerfile.bundle2  Dockerfile.imagemogrify  Dockerfile.imagescale  Dockerfile.jekyll  Dockerfile.jekyll2
_includes/: about-links.html  anth-argument.html  british_date.md  commentForm.html  comments.html  compress.html  crystal.html  dropdown.html  footer.html  frontpage.css  head.html  header.html  header_tagline.html  lazyload.html  mc.html  padder.html  phone_img.html  pomo-argument.html  rss.html  russell-argument.html  timeline_code.html  wc.html  wc.md  years-of-code  zhang-argument.html
_layouts/: book.html  default.html  frontpage.html  math_post.html  page.html  post.html
scripts/archiver/: .gitignore  Cargo.toml  HANDOFF.md  LICENSE  README.md  config.example.toml
scripts/archiver/launchd/: com.croissanthology.archiver.plist  maintain.sh
scripts/archiver/src/: archive.rs  check.rs  cli.rs  config.rs  extract.rs  local.rs  main.rs  measure.rs  notify.rs  paywall.rs  rehost.rs  site.rs  state.rs  ui.rs  viz.rs
(+3604 files in other folders)
